--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>Vlad project</groupId>
-	<artifactId>YOUR_INFO_HERE</artifactId>
+	<artifactId>Vlad project</artifactId>
 	<version>2.0-RELEASE</version>
 	<packaging>war</packaging>
-	<name>YOUR_INFO_HERE</name>
+	<name>Vlad project</name>
 	<description>DevOps project for Spring Boot test</description>
 
 	<properties>
